[project]
name = "mcp-agents-server"
version = "0.1.0"
description = "A secure MCP server providing Wikipedia search tools, protected by OAuth 2.0."
authors = [
    {name = "Nikki Vinayan", email = "info@nikvi.dev"},
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/nikvi/sample-mcp-server-with-auth"

dependencies = [
    "anthropic>=0.75.0",
    "cryptography>=46.0.3",
    "descope>=1.7.13",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "mcp>=1.23.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
